Completed the filter page

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -296,7 +296,8 @@
   "customizeClosetPageDescription": "Browse your closet in a flexible grid, sorted by your chosen category and order.",
   "customizeOutfitPageDescription": "Find items for your outfits in a flexible grid, sorted by category and order to make styling easy.",
   "filterFeatureTitle": "Find Your Favorites Faster",
-  "filterFeatureDescription": "Browse with ease! Filters help you quickly spot your best pieces.",
+  "basicFilterDescription": "Quickly search by item name or, with multi-closet [premium feature], choose which closet to explore.",
+  "advancedFilterDescription": "Refine your search to fit your style! Filter by item type, occasion, season, and more for a closet view that’s all you.",
   "filterClosetPageDescription": "Sort your closet by color, type, and more to find just what you need.",
   "filterOutfitPageDescription": "Focus on items that fit your style, mood, and plans.",
   "purchase_button": "Unlock Now",
