--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -296,7 +296,8 @@
   "customizeClosetPageDescription": "按您选择的类别和顺序浏览您的衣橱，灵活网格显示。",
   "customizeOutfitPageDescription": "通过网格按类别和顺序浏览单品，轻松找到穿搭灵感。",
   "filterFeatureTitle": "快速找到心仪单品",
-  "filterFeatureDescription": "轻松浏览！筛选功能助您迅速发现最佳单品。",
+  "basicFilterDescription": "通过物品名称快速搜索，或在多衣橱[高级功能]中选择要查看的衣橱。",
+  "advancedFilterDescription": "精确搜索，匹配您的风格！按物品类型、场合、季节等筛选，呈现属于您的衣橱视图。",
   "filterClosetPageDescription": "按颜色、类别等整理衣橱，找到所需单品。",
   "filterOutfitPageDescription": "专注于符合您风格、心情和计划的单品。",
   "purchase_button": "立即购买",
