Features implemented - Sentry logging for log out - Implemented public closet bottom sheet - Convert NPS score to all send email until iOS goes to prod - Implement hit test transulation for all input text requirements - Combine camera permission for both platforms

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -69,11 +69,13 @@
   "swap_item": "Swap QR",
   "metadata": "More",
   "addCloset_addCloset": "Multi Closet",
+  "public_closet": "Public",
   "itemUploaded_itemUploaded": "Item Uploaded",
   "myClosetTitle": "My Closet",
   "myOutfitTitle": "Create My Outfit",
   "closetUploadComplete": "I uploaded my closet",
   "closetLabel": "Closet",
+  "defaultClosetName": "Main Closet",
   "outfitLabel": "Outfit",
   "itemNameLabel": "Item Name",
   "pleaseEnterItemName": "Please enter an item name",
@@ -169,6 +171,8 @@
   "quicklyFindItems": "We’re thinking about adding advanced filters to help you find your items more easily. Sound good?",
   "multiClosetFeatureTitle": "Multiple Closets?",
   "multiClosetFeatureDescription": "We’re exploring adding multiple closets (permanent, disappearing)—would you use this?",
+  "publicClosetFeatureTitle": "Share Your Closet\nwith the Community",
+  "publicClosetFeatureDescription": "What if you could share items from your closet with neighbors and even host local sale events? Interested?",
   "metadataFeatureTitle": "More Item Details?",
   "metadataFeatureDescription": "Want to add extra details to your items for better organization? Let us know!",
   "calendarPremiumFeature": "Calendar View?",
@@ -250,6 +254,8 @@
   "noNewClothes1215AchievementMessage": "1,215 days of intentional living! Your journey is inspiring others to follow in your footsteps.",
   "noNewClothes1575Achievement": "Master of Minimalism!",
   "noNewClothes1575AchievementMessage": "1,575 days of embracing what you have. You're rewriting the rules of fashion!",
+  "noNewClothes1980Achievement": "Beacon of Sustainability!",
+  "noNewClothes1980AchievementMessage": "1,980 days of dedication to mindful choices! You're a shining example of sustainable living and an inspiration to us all. ✨🌏",
   "allClothesWornAchievement": "All Clothes, All You!",
   "allClothesWornAchievementMessage": "You've worn every single item in your closet! You're mastering mindful fashion choices.",
   "closetUploadAchievement": "Virtual Closet Complete!",
