--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -69,11 +69,13 @@
   "swap_item": "交换二维码",
   "metadata": "更多",
   "addCloset_addCloset": "添加衣橱",
+  "public_closet": "公共衣橱",
   "itemUploaded_itemUploaded": "物品已上传",
   "myClosetTitle": "我的衣橱",
   "myOutfitTitle": "创建我的造型",
   "closetUploadComplete": "我上传了我的衣橱",
   "closetLabel": "衣橱",
+  "defaultClosetName": "主衣柜",
   "outfitLabel": "造型",
   "itemNameLabel": "物品名称",
   "pleaseEnterItemName": "请输入物品名称",
@@ -169,6 +171,8 @@
   "quicklyFindItems": "我们考虑添加高级筛选功能，以帮助您更快找到物品。这个功能好吗？",
   "multiClosetFeatureTitle": "多个衣橱？",
   "multiClosetFeatureDescription": "我们正在探索添加多个衣橱（永久、消失）——您会使用吗？",
+  "publicClosetFeatureTitle": "与社区共享您的衣橱",
+  "publicClosetFeatureDescription": "如果您可以与邻居分享衣橱中的物品，甚至举办本地促销活动，您会感兴趣吗？",
   "metadataFeatureTitle": "更多物品细节？",
   "metadataFeatureDescription": "想为您的物品添加更多细节，以便更好地组织？告诉我们吧！",
   "calendarPremiumFeature": "日历视图？",
@@ -250,6 +254,8 @@
   "noNewClothes1215AchievementMessage": "1,215天的有意生活！您的旅程正在激励他人追随您的脚步。",
   "noNewClothes1575Achievement": "极简主义大师！",
   "noNewClothes1575AchievementMessage": "1,575天珍惜已有之物。您正在重新定义时尚规则！",
+  "noNewClothes1980Achievement": "可持续发展的灯塔！",
+  "noNewClothes1980AchievementMessage": "1980天坚持明智的选择！你是可持续生活的光辉榜样，激励着我们所有人。✨🌏",
   "allClothesWornAchievement": "每件衣服，都是您的选择！",
   "allClothesWornAchievementMessage": "您已经穿过衣橱中的每一件物品！您正在掌控自己的时尚选择。",
   "closetUploadAchievement": "虚拟衣橱已完成！",
