Implemented first draft of multi closet that is focus on view and create multi closet. - Create multi-closet UI shown, but logic not working Dealt with a couple of formatting design

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -69,6 +69,9 @@
   "swap_item": "Swap QR",
   "metadata": "More",
   "addCloset_addCloset": "Multi Closet",
+  "createCloset": "Create Closet",
+  "allClosets": "Edit All Closets",
+  "noClosetsFound": "No closets found",
   "public_closet": "Public",
   "itemUploaded_itemUploaded": "Item Uploaded",
   "myClosetTitle": "My Closet",
@@ -171,6 +174,12 @@
   "quicklyFindItems": "We’re thinking about adding advanced filters to help you find your items more easily. Sound good?",
   "multiClosetFeatureTitle": "Multiple Closets?",
   "multiClosetFeatureDescription": "We’re exploring adding multiple closets (permanent, disappearing)—would you use this?",
+  "MultiClosetFeatureTitle": "Manage Your Multi-Closets",
+  "viewMultiClosetDescription": "Explore options for your multi-closets.\nYou can create a new multi-closet,\nedit items from all multi-closets,\nor make changes to a single multi-closet.",
+  "createMultiClosetDescription": "Create a new multi-closet, organize items,\nand add metadata to keep your closets structured",
+  "editSingleMultiClosetDescription": "Edit a single multi-closet.\nTransfer items to another closet,\nupdate metadata,\nchange the multi-closet image,\nor archive the closet.",
+  "editAllMultiClosetDescription": "Edit all multi-closets at once.\nTransfer items to a single closet and streamline your wardrobe.",
+  "multiClosetManagement": "Multi-Closet Management",
   "publicClosetFeatureTitle": "Share Your Closet\nwith the Community",
   "publicClosetFeatureDescription": "What if you could share items from your closet with neighbors and even host local sale events? Interested?",
   "metadataFeatureTitle": "More Item Details?",
@@ -344,5 +353,17 @@
   "allClosetLabel": "All Closet",
   "selectClosetLabel": "Select Closet",
   "saveFilter": "Save Filter",
-  "noClosetsAvailable": "No closets available"
+  "noClosetsAvailable": "No closets available",
+  "closetName": "Closet Name",
+  "closetType": "Closet Type",
+  "permanentCloset": "Permanent Closet",
+  "disappearingCloset": "Disappearing Closet",
+  "publicOrPrivate": "Public or Private",
+  "public": "Public",
+  "private": "Private",
+  "disappearAfterMonths": "Hidden for",
+  "months": "Months",
+  "closet_created_successfully": "Closet created successfully!",
+  "error_creating_closet": "Error: {error}",
+  "create_closet": "Create Closet"
 }
