--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -69,6 +69,9 @@
   "swap_item": "交换二维码",
   "metadata": "更多",
   "addCloset_addCloset": "添加衣橱",
+  "createCloset": "创建衣柜",
+  "allClosets": "编辑所有衣柜",
+  "noClosetsFound": "未找到衣橱",
   "public_closet": "公共衣橱",
   "itemUploaded_itemUploaded": "物品已上传",
   "myClosetTitle": "我的衣橱",
@@ -171,6 +174,12 @@
   "quicklyFindItems": "我们考虑添加高级筛选功能，以帮助您更快找到物品。这个功能好吗？",
   "multiClosetFeatureTitle": "多个衣橱？",
   "multiClosetFeatureDescription": "我们正在探索添加多个衣橱（永久、消失）——您会使用吗？",
+  "MultiClosetFeatureTitle": "管理您的多衣橱",
+  "viewMultiClosetDescription": "探索您的多衣橱选项。您可以创建一个新的多衣橱，\n从所有多衣橱中编辑物品，或对单个多衣橱进行修改。",
+  "createMultiClosetDescription": "创建一个新的多衣橱，整理物品并添加元数据以保持衣橱有序。",
+  "editSingleMultiClosetDescription": "编辑单个多衣橱。将物品转移到另一个衣橱，\n更新元数据，更改多衣橱图片，或归档该衣橱。",
+  "editAllMultiClosetDescription": "同时编辑所有多衣橱。\n将物品转移到单个衣橱，简化您的衣橱管理。",
+  "multiClosetManagement": "多衣柜管理",
   "publicClosetFeatureTitle": "与社区共享您的衣橱",
   "publicClosetFeatureDescription": "如果您可以与邻居分享衣橱中的物品，甚至举办本地促销活动，您会感兴趣吗？",
   "metadataFeatureTitle": "更多物品细节？",
@@ -344,5 +353,17 @@
   "allClosetLabel": "所有衣橱",
   "selectClosetLabel": "选择衣橱",
   "saveFilter": "保存筛选",
-  "noClosetsAvailable": "没有可用的衣柜"
+  "noClosetsAvailable": "没有可用的衣柜",
+  "closetName": "衣橱名称",
+  "closetType": "衣橱类型",
+  "permanentCloset": "永久衣橱",
+  "disappearingCloset": "消失衣橱",
+  "publicOrPrivate": "公开或私人",
+  "public": "公开",
+  "private": "私人",
+  "disappearAfterMonths": "隐藏",
+  "months": "月",
+  "closet_created_successfully": "衣橱创建成功！",
+  "error_creating_closet": "错误：{error}",
+  "create_closet": "创建衣橱"
 }
