The conditional metadata are working in create multi-closet

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -182,6 +182,11 @@
   "multiClosetManagement": "Multi-Closet Management",
   "publicClosetFeatureTitle": "Share Your Closet\nwith the Community",
   "publicClosetFeatureDescription": "What if you could share items from your closet with neighbors and even host local sale events? Interested?",
+  "enterClosetName": "Please enter a closet name",
+  "closetNameCannotBeEmpty": "Closet name cannot be empty",
+  "monthsCannotBeEmpty": "Months cannot be empty",
+  "invalidMonths": "Invalid months (enter a positive number)",
+  "enterMonths": "Please enter the number of months",
   "metadataFeatureTitle": "More Item Details?",
   "metadataFeatureDescription": "Want to add extra details to your items for better organization? Let us know!",
   "calendarPremiumFeature": "Calendar View?",
