--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -182,6 +182,11 @@
   "multiClosetManagement": "多衣柜管理",
   "publicClosetFeatureTitle": "与社区共享您的衣橱",
   "publicClosetFeatureDescription": "如果您可以与邻居分享衣橱中的物品，甚至举办本地促销活动，您会感兴趣吗？",
+  "enterClosetName": "请输入衣橱名称",
+  "closetNameCannotBeEmpty": "衣橱名称不能为空",
+  "monthsCannotBeEmpty": "月份不能为空",
+  "invalidMonths": "无效的月份（请输入正数）",
+  "enterMonths": "请输入月份数",
   "metadataFeatureTitle": "更多物品细节？",
   "metadataFeatureDescription": "想为您的物品添加更多细节，以便更好地组织？告诉我们吧！",
   "calendarPremiumFeature": "日历视图？",
