Refactor the bloc to split the logic to fetch, select, validate and save for modular purposes - Got the scrolling working for item list - Validation not working for metadata, as it saves automatically to supabase, to investigate

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -370,5 +370,7 @@
   "months": "Months",
   "closet_created_successfully": "Closet created successfully!",
   "error_creating_closet": "Error: {error}",
-  "create_closet": "Create Closet"
+  "create_closet": "Create Closet",
+  "validation_error": "Error found. Check your input.",
+  "fix_validation_errors": "Fix the errors to continue."
 }
