--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -370,5 +370,7 @@
   "months": "月",
   "closet_created_successfully": "衣橱创建成功！",
   "error_creating_closet": "错误：{error}",
-  "create_closet": "创建衣橱"
+  "create_closet": "创建衣橱",
+  "validation_error_zh": "发现错误。请检查输入。",
+  "fix_validation_errors_zh": "修正错误以继续。"
 }
