Split the validation closet bloc into metadata bloc and validation bloc Validation works, except need to implement error reporting

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -372,5 +372,7 @@
   "error_creating_closet": "Error: {error}",
   "create_closet": "Create Closet",
   "validation_error": "Error found. Check your input.",
-  "fix_validation_errors": "Fix the errors to continue."
+  "fix_validation_errors": "Fix the errors to continue.",
+  "reservedClosetNameError": "'cc_closet' is a reserved name. Please choose another.",
+  "publicPrivateSelectionRequired": "Please select public or private for a permanent closet."
 }
