--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -384,7 +384,8 @@
   "validDate": "Valid Date",
   "pleaseEnterValidDate": "Please enter a valid date",
   "archiveCloset": "Archive\nCloset",
-  "selectAll": "Select\nAll",
+  "archiveClosetTitle": "Archive Closet",
+  "selectAll": "Select All",
   "dateCannotBeTodayOrEarlier": "The selected date cannot be today or earlier.",
   "invalidMonthsValue": "Invalid value for months.",
   "monthsCannotExceed12": "Cannot exceed 12 months",
@@ -393,6 +394,6 @@
   "warning": "Warning",
   "archiveWarning": "Are you sure you want to archive this closet?\nAll items will be moved back to your main closet.",
   "archive": "Archive",
-  "archiveClosetDescription": "Archiving this closet will return all items to your main closet.\nThis action cannot be undone.",
+  "archiveClosetDescription": "Archiving this closet will return all items to your main closet.\n\nThis action cannot be undone.",
   "failedToLoadMetadata": "Failed to load closet metadata.\nPlease try again."
 }
