First draft of photo beside Closet Metadata. Looks ugly, but wanted to get the feature out of the door asap. To fix it later, when I got time.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -311,6 +311,12 @@
   "selfieSilverDescription": "Take 700 more selfies and show off your fashion progress!",
   "selfieGoldTitle": "Gold Plan - Selfie",
   "selfieGoldDescription": "Unlimited selfies! Capture your looks whenever inspiration strikes.",
+  "editClosetBronzeTitle": "Bronze Plan - Edit Closet Images",
+  "editClosetBronzeDescription": "Update and edit up to 200 closet photos to keep your digital closet organized and stylish.",
+  "editClosetSilverTitle": "Silver Plan - Edit Closet Images",
+  "editClosetSilverDescription": "Edit up to 700 closet photos and enhance your capsule closet management!",
+  "editClosetGoldTitle": "Gold Plan - Edit Closet Images",
+  "editClosetGoldDescription": "Enjoy unlimited edits for your closet photos and create the perfect digital wardrobe experience.",
   "multiOutfitTitle": "Multi Outfit Premium Feature",
   "multiOutfitDescription": "Create multiple outfits a day and keep experimenting with your style!",
   "customizeTitle": "Personalized Closet View",
