--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -311,6 +311,12 @@
   "selfieSilverDescription": "再拍700张自拍，展示您的时尚进步！",
   "selfieGoldTitle": "金计划 - 自拍",
   "selfieGoldDescription": "无限自拍！当灵感来临时，随时记录您的造型。",
+  "editClosetBronzeTitle": "铜计划 - 编辑衣橱照片",
+  "editClosetBronzeDescription": "更新和编辑最多 200 张衣橱照片，保持您的数字衣橱井井有条、时尚有型。",
+  "editClosetSilverTitle": "银计划 - 编辑衣橱照片",
+  "editClosetSilverDescription": "编辑最多 700 张衣橱照片，提升您的胶囊衣橱管理能力！",
+  "editClosetGoldTitle": "金计划 - 无限衣橱照片",
+  "editClosetGoldDescription": "无限编辑您的衣橱照片，打造完美的数字衣橱体验。",
   "multiOutfitTitle": "多造型高级功能",
   "multiOutfitDescription": "每天创建多个造型，继续实验您的风格！",
   "customizeTitle": "个性化衣橱视图",
