Enable Metadata update in Multi Closet Edit

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -67,6 +67,8 @@
   "upload_upload": "Upload",
   "filter_filter": "Filter",
   "swap_item": "Swap QR",
+  "chooseSwap": "Choose Swap",
+  "confirmSwap": "Confirm Swap",
   "metadata": "More",
   "addCloset_addCloset": "Multi Closet",
   "createCloset": "Create Closet",
