Implement swap closet for multi closet edit

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -77,6 +77,8 @@
   "singleClosetShown": "Single Closet",
   "noClosetsFound": "No closets found",
   "public_closet": "Public",
+  "errorSavingCloset": "Error saving closet",
+  "errorFetchingClosets": "Error fetching closets",
   "itemUploaded_itemUploaded": "Item Uploaded",
   "myClosetTitle": "My Closet",
   "myOutfitTitle": "Create My Outfit",
