Second draft of monthly calendar, the focus is at getting the UI working. There are some major issues in terms of logic. But can go and fix that later.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -429,8 +429,10 @@
   "calendarNotSelectable": "Outfit Details",
   "focusedDate": "Focused Date",
   "calendarSelectable": "Create Closet",
-  "outfitActive": "Active",
-  "outfitInactive": "Inactive",
+  "outfitActive": "Active Outfits",
+  "outfitInactive": "Inactive Outfits",
+  "outfitsAll": "All Outfits",
+  "outfitStatus": "Outfit Status",
   "filterEventName": "Filter by Event Name",
   "feedback": "Feedback",
   "noOutfitsInMonth": "No outfits found in this month. You can create your first reviewed outfit or choose another date where you have reviewed your outfit."
