--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -435,5 +435,9 @@
   "outfitStatus": "穿搭状态",
   "filterEventName": "按活动名称筛选",
   "feedback": "反馈",
-  "noOutfitsInMonth": "本月没有找到衣服。您可以创建第一个已评价的衣服，或者选择一个您已评价衣服的日期。"
+  "noOutfitsInMonth": "本月没有找到衣服。您可以创建第一个已评价的衣服，或者选择一个您已评价衣服的日期。",
+  "noReviewedOutfitMessage": "您尚未评价任何穿搭。请从评价您的第一个穿搭开始！",
+  "noFilteredOutfitMessage": "没有符合当前筛选条件的穿搭。请调整筛选条件以找到已评价的穿搭。",
+  "noOutfitsAvailable": "没有可用的服装或物品",
+  "focus": "专注当日"
 }
