--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -105,6 +105,7 @@
   "item_name": "Item Name",
   "upload": "Upload",
   "next": "Next",
+  "previous": "Previous",
   "itemNameFieldNotFilled": "Item Name field is not filled.",
   "amountSpentFieldNotFilled": "Amount Spent field is not filled.",
   "itemTypeFieldNotFilled": "Item Type field is not filled.",
