--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -105,6 +105,7 @@
   "item_name": "物品名称",
   "upload": "上传",
   "next": "下一步",
+  "previous": "上一步",
   "itemNameFieldNotFilled": "物品名称未填写。",
   "amountSpentFieldNotFilled": "花费金额未填写。",
   "itemTypeFieldNotFilled": "物品类型未填写。",
