--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -213,7 +213,7 @@
   "noItemsFound": "未找到物品。",
   "styleOn": "评论造型",
   "like": "爱它！😍",
-  "alright": "还不错 🤷‍♀️",
+  "alright": "不确定\n🤷‍♀️",
   "dislike": "不太适合我 🤔",
   "selfie": "自拍",
   "share": "分享",
@@ -225,7 +225,7 @@
   "privacyTerms": "隐私条款",
   "and": " 和 ",
   "termsAndConditions": "服务条款",
-  "alright_feedback_sentence": "点击不太适合这个造型的物品。",
+  "alright_feedback_sentence": "点击你不确定的物品。",
   "dislike_feedback_sentence": "点击不合适这个造型的物品。",
   "outfitReviewTitle": "造型评论已提交",
   "outfitReviewContent": "您的造型评论已成功提交！",
@@ -416,9 +416,10 @@
   "trialEndedTitle": "您的试用期已结束",
   "trialEndedMessage": "您的高级功能试用期已结束。",
   "trialEndedNextSteps": "高级功能现已锁定。您可以随时通过一次性购买来解锁这些功能。",
-  "trialStartedTitle": "试用已激活",
-  "trialStartedMessage": "您已成功激活您的高级试用。所有高级功能现已可用，为您带来更佳体验！",
-  "trialStartedNextSteps": "探索应用并试用高级功能。您的试用将在30天后到期。",
+  "trialStartedTitle": "探索高级权益",
+  "trialStartedMessage": "这些是您可以探索的所有高级功能。您想立即开始您的 30 天免费试用吗？",
+  "trialStartedNextSteps": "您已成功激活高级功能。所有高级功能现已可用，以提升您的体验。",
+  "trialStartedNextStepsTitle": "试用已激活！",
   "trialIncludedTitle": "试用包含的功能",
   "trialIncludedFilter": "更轻松筛选物品的过滤器",
   "trialIncludedCustomize": "自定义网格大小，并按每次穿着成本、更新日期等排序物品。",
@@ -445,5 +446,7 @@
   "noOutfitComments": "这套穿搭没有评论。",
   "viewMonthlyCalendarDescription": "以日历格式查看您的所有穿搭。可按活动名称、当前穿搭和穿搭反馈进行筛选。",
   "createClosetCalendarDescription": "选择您感兴趣的穿搭，并查看所有相关物品以创建衣橱。",
-  "viewDailyCalendarDescription": "查看当天穿搭的所有详情，包括活动名称、评论和穿搭反馈."
+  "viewDailyCalendarDescription": "查看当天穿搭的所有详情，包括活动名称、评论和穿搭反馈.",
+  "encourageComment": "你还没有为这套搭配添加评论！",
+  "startFreeTrial": "开始免费试用"
 }
